# vcs-creator

./: .gitignore  README.md  meson.build
build-aux/: post_install.py
debian/: changelog  control  copyright  debhelper-build-stamp  rules
po/: POTFILES  en.po  it.po  meson.build
resources/: com.github.tudo75.vcs-creator.gresource.xml  meson.build  style.css  vcs-creator.desktop
src/: application.vala  config.vala.in  filesdialog.vala  settingsdialog.vala
