# install icon
install_data(
  'vcs-creator.svg',
  install_dir: join_paths(
        get_option('datadir'), 
        'icons', 
        'hicolor',
        'scalable',
        'apps',
    ),
)

# install launcher
install_data(
  'vcs-creator.desktop',
  install_dir: join_paths(
        get_option('datadir'), 
        'applications',
    ),
)

